[gd_scene load_steps=8 format=3 uid="uid://drk2anfxoxvri"]

[ext_resource type="Script" path="res://towers/sharp_shooter/sharp_shooter.gd" id="1_2n81u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x3rrk"]
bg_color = Color(0, 0.6, 0.701961, 0.419608)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[sub_resource type="CircleShape2D" id="CircleShape2D_bf3lk"]
radius = 300.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xbi03"]
size = Vector2(40, 40)

[sub_resource type="Animation" id="Animation_cxokf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture/Sniper:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -40)]
}

[sub_resource type="Animation" id="Animation_eobuc"]
resource_name = "Shoot"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture/Sniper:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -40), Vector2(0, -30), Vector2(0, -40)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fvsxm"]
_data = {
"RESET": SubResource("Animation_cxokf"),
"Shoot": SubResource("Animation_eobuc")
}

[node name="SharpShooter" type="CharacterBody2D" groups=["Tower"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_2n81u")

[node name="RangeIndicator" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(600, 600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x3rrk")

[node name="DetectionRange" type="Area2D" parent="." groups=["Tower"]]
collision_layer = 2
collision_mask = 4

[node name="Collider" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_bf3lk")

[node name="Texture" type="Node2D" parent="."]

[node name="Body" type="ColorRect" parent="Texture"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129492, 0.365382, 1, 1)

[node name="Sniper" type="ColorRect" parent="Texture"]
offset_top = -40.0
offset_right = 10.0
color = Color(0.215902, 0.215902, 0.215902, 1)

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xbi03")

[node name="Ray" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 4

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fvsxm")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_detection_range_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
